objects/Feedback__c.object
<CustomObject>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>FeedbackID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Caseid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caseid</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fesiablity__c</fullName>
        <label>Feasibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avoidable</fullName>
                </value>
                <value>
                    <fullName>Unavoidable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reopen_case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopen case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Rating__c</fullName>
        <label>Resolution Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>